smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/invalid-trait-shape-id-key.smithy
// Parse error at line 4, column 30 near `.e`: Expected: ')', but found '.'
namespace smithy.example

@externalDocumentation(smithy.example#foo: "bar")
string MyString
